# whatsapp-clone-backend

./: Cargo.toml  diesel.toml
migrations/2025-06-15-112916_create_users/: up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs
