[package]
name = "whatsapp-clone-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.41"
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
argon2 = "0.5.3"
rand = "0.8"
jwt-simple = "0.12.12"
jsonwebtoken = "9.3.1"
r2d2 = "0.8.10"
